// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render VerificationListItem pending] 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderColor": "#808080",
      "borderRadius": 10,
      "borderWidth": 0.2,
      "elevation": 1,
      "marginTop": 10,
      "shadowColor": "black",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.1,
    }
  }
>
  <View
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "#FFFFFF",
            "borderRadius": 4,
            "flex": 1,
            "flexDirection": "column",
            "paddingBottom": 14,
            "paddingLeft": 18,
            "paddingRight": 18,
            "paddingTop": 14,
          },
          Object {
            "flex": 1,
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgba(91,91,91,1)",
                "fontFamily": "NunitoSans-Bold",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          Employer
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgba(155,155,155,1)",
                "fontFamily": "NunitoSans-Light",
                "fontSize": 12,
                "letterSpacing": 0.5,
                "lineHeight": 16,
                "marginTop": 5,
              },
            ]
          }
        >
          issuerName
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "borderColor": "#FFFFFF",
            "borderRadius": 4,
            "flex": 1,
            "flexDirection": "column",
            "paddingBottom": 14,
            "paddingLeft": 18,
            "paddingRight": 18,
            "paddingTop": 14,
          },
          Object {
            "alignItems": "center",
            "borderTopColor": "#808080",
            "borderTopWidth": 0.5,
            "flex": 1,
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgba(10, 10, 10, 0.5)",
              "fontFamily": "NunitoSans-Bold",
              "fontSize": 10,
              "letterSpacing": 0.5,
            },
          ]
        }
      >
        pending
      </Text>
    </View>
  </View>
</View>
`;

exports[`render VerificationListItem with expiration 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderColor": "#808080",
      "borderRadius": 10,
      "borderWidth": 0.2,
      "elevation": 1,
      "marginTop": 10,
      "shadowColor": "black",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.1,
    }
  }
>
  <View
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "#FFFFFF",
            "borderRadius": 4,
            "flex": 1,
            "flexDirection": "column",
            "paddingBottom": 14,
            "paddingLeft": 18,
            "paddingRight": 18,
            "paddingTop": 14,
          },
          Object {
            "flex": 1,
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgba(91,91,91,1)",
                "fontFamily": "NunitoSans-Bold",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          issuerName
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgba(155,155,155,1)",
                "fontFamily": "NunitoSans-Light",
                "fontSize": 12,
                "letterSpacing": 0.5,
                "lineHeight": 16,
                "marginTop": 5,
              },
            ]
          }
        >
          Employer
        </Text>
      </View>
      <ExpirationItem
        d={2016-12-21T21:10:17.248Z}
      />
    </View>
    <View
      style={
        Array [
          Object {
            "borderColor": "#FFFFFF",
            "borderRadius": 4,
            "flex": 1,
            "flexDirection": "column",
            "paddingBottom": 14,
            "paddingLeft": 18,
            "paddingRight": 18,
            "paddingTop": 14,
          },
          Object {
            "alignItems": "center",
            "borderTopColor": "#808080",
            "borderTopWidth": 0.5,
            "flex": 1,
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgba(10, 10, 10, 0.5)",
              "fontFamily": "NunitoSans-Bold",
              "fontSize": 10,
              "letterSpacing": 0.5,
            },
          ]
        }
      >
        Consensys AG
      </Text>
    </View>
  </View>
</View>
`;

exports[`render VerificationListItem without expiration 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderColor": "#808080",
      "borderRadius": 10,
      "borderWidth": 0.2,
      "elevation": 1,
      "marginTop": 10,
      "shadowColor": "black",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.1,
    }
  }
>
  <View
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "#FFFFFF",
            "borderRadius": 4,
            "flex": 1,
            "flexDirection": "column",
            "paddingBottom": 14,
            "paddingLeft": 18,
            "paddingRight": 18,
            "paddingTop": 14,
          },
          Object {
            "flex": 1,
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgba(91,91,91,1)",
                "fontFamily": "NunitoSans-Bold",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          issuerName
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgba(155,155,155,1)",
                "fontFamily": "NunitoSans-Light",
                "fontSize": 12,
                "letterSpacing": 0.5,
                "lineHeight": 16,
                "marginTop": 5,
              },
            ]
          }
        >
          Employer
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "borderColor": "#FFFFFF",
            "borderRadius": 4,
            "flex": 1,
            "flexDirection": "column",
            "paddingBottom": 14,
            "paddingLeft": 18,
            "paddingRight": 18,
            "paddingTop": 14,
          },
          Object {
            "alignItems": "center",
            "borderTopColor": "#808080",
            "borderTopWidth": 0.5,
            "flex": 1,
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgba(10, 10, 10, 0.5)",
              "fontFamily": "NunitoSans-Bold",
              "fontSize": 10,
              "letterSpacing": 0.5,
            },
          ]
        }
      >
        Consensys AG
      </Text>
    </View>
  </View>
</View>
`;
